Fixing button and popup overlap + clearing popup on start

--- a/src/styles.css
+++ b/src/styles.css
@@ -253,6 +253,8 @@ main.correct {
   width: 500px;
   padding: 20px;
   border-radius: 20px;
+
+  z-index: 10;
 }
 
 .summary-popup-container.show {
